// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.1.14 2024/4/25
  <ul>
    <li>newsコマンドを修正</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.1.13 2024/4/25
  <ul>
    <li>タイトル画面を改変しやすいものに変更</li>
  </ul>
</li>
<li>Polaris Engine 1.1.12 2024/4/25
  <ul>
    <li>カスタムシステムメニューの機能向上 (gosub-guiとgosub-backの追加、pushstageをpushstateに変更)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.11 2024/4/24
  <ul>
    <li>カスタムシステムメニューのGUIのglobalセクションにpushstageフラグを追加、gosub後にs2_pop_stage()で復元可能に</li>
  </ul>
</li>
<li>Polaris Engine 1.1.10 2024/4/24
  <ul>
    <li>自動インデントをコンフィグ化(serif.quote.indent)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.9 2024/4/24
  <ul>
    <li>簡単な補完を実装</li>
  </ul>
</li>
<li>Polaris Engine 1.1.8 2024/4/24
  <ul>
    <li>シナリオを保存した際にusingブロックが展開されてしまうバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.7 2024/4/24
  <ul>
    <li>@set $1 = $TIME で時刻(秒)を取得できるように機能追加</li>
  </ul>
</li>
<li>Polaris Engine 1.1.6 2024/4/24
  <ul>
    <li>カッコではじまる文章の場合、２行目をカッコの分だけ字下げするように改善</li>
  </ul>
</li>
<li>Polaris Engine 1.1.5 2024/4/24
  <ul>
    <li>10回に2回程度、2回まばたきするように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.1.4 2024/4/24
  <ul>
    <li>cha/all/cl.runでキャラを移動したときに目パチを再設定するように修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.3 2024/4/23
  <ul>
    <li>カスタム1/2ボタンのgosub動作のバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.2 2024/4/23
  <ul>
    <li>switchコマンドのバグ修正</li>
    <li>switchコマンドの非推奨化</li>
  </ul>
</li>
<li>Polaris Engine 1.1.1 2024/4/22
  <ul>
    <li>ORBISライブラリの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.22 2024/4/21
  <ul>
    <li>内部的な修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.21 2024/4/21
  <ul>
    <li>Ubuntu版の修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.20 2024/4/21
  <ul>
    <li>署名を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.0.19 2024/4/21
  <ul>
    <li>Cielシステムのバグ修正</li>
    <li>エディタ(エクスポート前の状態)で右上ボタンを常に表示するように変更 (チラつきによる違和感を抑制)</li>
  </ul>
</li>